--- a/index.html
+++ b/index.html
@@ -126,42 +126,18 @@
                         <h2 class="section-title">Why SketchPrompt?</h2>
                         <div class="why-cards">
                             <div class="why-card">
-                                <div class="why-icon">
-                                    <!-- Light Bulb Icon -->
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126ZM12 15.75h.007v.008H12v-.008Z" />
-                                    </svg>
-                                </div>
                                 <h3>Visual thinking is powerful</h3>
                                 <p>Sketching helps you clarify, remember, and communicate ideas more effectively than text alone.</p>
                             </div>
                             <div class="why-card">
-                                <div class="why-icon">
-                                    <!-- Chat Bubble Icon -->
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 0 1 .865-.501 48.172 48.172 0 0 0 3.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
-                                    </svg>
-                                </div>
                                 <h3>Communicate intent to AI</h3>
                                 <p>Don't waste time typing long explanations. Show your intent visually and let AI understand you faster.</p>
                             </div>
                             <div class="why-card">
-                                <div class="why-icon">
-                                    <!-- Puzzle Piece Icon -->
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 0 0 6 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 0 1 6 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 0 1 6-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0 0 18 18a8.967 8.967 0 0 0-6 2.292m0-14.25v14.25" />
-                                    </svg>
-                                </div>
                                 <h3>All-in-one workflow</h3>
                                 <p>No more switching between tools, windows, or tabs. Sketch, prompt, and collaborate—all in one place.</p>
                             </div>
                             <div class="why-card">
-                                <div class="why-icon">
-                                    <!-- Link Icon -->
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 0 1 1.242 7.244l-4.5 4.5a4.5 4.5 0 0 1-6.364-6.364l1.757-1.757m13.35-.622 1.757-1.757a4.5 4.5 0 0 0-6.364-6.364l-4.5 4.5a4.5 4.5 0 0 0 1.242 7.244" />
-                                    </svg>
-                                </div>
                                 <h3>Seamless integration</h3>
                                 <p>Built for Cursor IDE, SketchPrompt fits right into your coding workflow.</p>
                             </div>
@@ -172,7 +148,7 @@
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904 9 18.75l-.813-2.846a4.5 4.5 0 0 0-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 0 0 3.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 0 0 3.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 0 0-3.09 3.09ZM18.259 8.715 18 9.75l-.259-1.035a3.375 3.375 0 0 0-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 0 0 2.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 0 0 2.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 0 0-2.456 2.456ZM16.894 20.567 16.5 21.75l-.394-1.183a2.25 2.25 0 0 0-1.423-1.423L13.5 18.75l1.183-.394a2.25 2.25 0 0 0 1.423-1.423l.394-1.183.394 1.183a2.25 2.25 0 0 0 1.423 1.423l1.183.394-1.183.394a2.25 2.25 0 0 0-1.423 1.423Z" />
                                     </svg>
                                 </div>
-                                <h3>Research-Backed Facts</h3>
+                                <h3>Some fun facts</h3>
                                 <p class="fun-fact-text">Pictures beat words for memory. After three days, people recall <em>65%</em> of what they saw in images versus only <em>10%</em> of text—the classic <em>picture-superiority effect</em>.<sup class="footnote-link" data-sources="1">1</sup><sup class="footnote-link" data-sources="2">2</sup></p>
                                 <div class="fact-indicator">
                                     <span class="indicator-dot active"></span>
@@ -186,7 +162,6 @@
                                     <span class="indicator-dot"></span>
                                     <span class="indicator-dot"></span>
                                 </div>
-                                <button onclick="cycleFunFact()" style="margin-top: 10px; padding: 5px 10px; background: #6366f1; color: white; border: none; border-radius: 4px; cursor: pointer;">Test Cycle</button>
                             </div>
                         </div>
                     </div>
