--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SketchPrompt - Visual thinking for coding with AI</title>
     <meta name="description" content="A powerful Cursor IDE extension for visual thinking and AI prompting. Sketch ideas and seamlessly collaborate with AI.">
     <meta name="keywords" content="SketchPrompt, Cursor IDE, AI collaboration, visual thinking, sketching, TLDraw">
+    <meta name="robots" content="index, follow">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -23,7 +24,7 @@
 
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" font-display="swap">
 </head>
 <body>
     <!-- Navigation -->
@@ -142,25 +143,19 @@
                                 <p>Built for Cursor IDE, SketchPrompt fits right into your coding workflow.</p>
                             </div>
                             <div class="why-card fun-fact">
-                                <div class="why-icon">
-                                    <!-- Sparkles Icon -->
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904 9 18.75l-.813-2.846a4.5 4.5 0 0 0-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 0 0 3.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 0 0 3.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 0 0-3.09 3.09ZM18.259 8.715 18 9.75l-.259-1.035a3.375 3.375 0 0 0-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 0 0 2.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 0 0 2.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 0 0-2.456 2.456ZM16.894 20.567 16.5 21.75l-.394-1.183a2.25 2.25 0 0 0-1.423-1.423L13.5 18.75l1.183-.394a2.25 2.25 0 0 0 1.423-1.423l.394-1.183.394 1.183a2.25 2.25 0 0 0 1.423 1.423l1.183.394-1.183.394a2.25 2.25 0 0 0-1.423 1.423Z" />
-                                    </svg>
-                                </div>
                                 <h3>Some fun facts</h3>
-                                <p class="fun-fact-text">Pictures beat words for memory. After three days, people recall <em>65%</em> of what they saw in images versus only <em>10%</em> of text—the classic <em>picture-superiority effect</em>.<sup class="footnote-link" data-sources="1">1</sup><sup class="footnote-link" data-sources="2">2</sup></p>
+                                <p class="fun-fact-text" aria-live="polite"></p>
                                 <div class="fact-indicator">
-                                    <span class="indicator-dot active"></span>
-                                    <span class="indicator-dot"></span>
-                                    <span class="indicator-dot"></span>
-                                    <span class="indicator-dot"></span>
-                                    <span class="indicator-dot"></span>
-                                    <span class="indicator-dot"></span>
-                                    <span class="indicator-dot"></span>
-                                    <span class="indicator-dot"></span>
-                                    <span class="indicator-dot"></span>
-                                    <span class="indicator-dot"></span>
+                                    <span class="indicator-dot" aria-label="Fact 1"></span>
+                                    <span class="indicator-dot" aria-label="Fact 2"></span>
+                                    <span class="indicator-dot" aria-label="Fact 3"></span>
+                                    <span class="indicator-dot" aria-label="Fact 4"></span>
+                                    <span class="indicator-dot" aria-label="Fact 5"></span>
+                                    <span class="indicator-dot" aria-label="Fact 6"></span>
+                                    <span class="indicator-dot" aria-label="Fact 7"></span>
+                                    <span class="indicator-dot" aria-label="Fact 8"></span>
+                                    <span class="indicator-dot" aria-label="Fact 9"></span>
+                                    <span class="indicator-dot" aria-label="Fact 10"></span>
                                 </div>
                             </div>
                         </div>
@@ -337,7 +332,7 @@
             <p>Join us in building the future of visual thinking for human-AI collaboration.</p>
             <div class="cta-buttons">
                 <a href="#installation" class="btn btn-primary">Use SketchPrompt in Cursor</a>
-                <a href="https://github.com/pascalx-git/SketchPrompt" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                <a href="https://github.com/pascalx-git/SketchPrompt" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">View on GitHub</a>
             </div>
         </div>
     </section>
@@ -355,14 +350,14 @@
                 </div>
                 <div class="footer-section">
                     <h4>Links</h4>
-                    <a href="https://github.com/pascalx-git/SketchPrompt" target="_blank">GitHub</a>
-                    <a href="https://github.com/pascalx-git/SketchPrompt/issues" target="_blank">Issues</a>
-                    <a href="https://github.com/pascalx-git/SketchPrompt/blob/main/LICENSE" target="_blank">License</a>
+                    <a href="https://github.com/pascalx-git/SketchPrompt" target="_blank" rel="noopener noreferrer">GitHub</a>
+                    <a href="https://github.com/pascalx-git/SketchPrompt/issues" target="_blank" rel="noopener noreferrer">Issues</a>
+                    <a href="https://github.com/pascalx-git/SketchPrompt/blob/main/LICENSE" target="_blank" rel="noopener noreferrer">License</a>
                 </div>
                 <div class="footer-section">
                     <h4>Resources</h4>
-                    <a href="https://cursor.sh" target="_blank">Cursor IDE</a>
-                    <a href="https://github.com/pascalx-git/SketchPrompt/blob/main/Help.md" target="_blank">Help</a>
+                    <a href="https://cursor.sh" target="_blank" rel="noopener noreferrer">Cursor IDE</a>
+                    <a href="https://github.com/pascalx-git/SketchPrompt/blob/main/Help.md" target="_blank" rel="noopener noreferrer">Help</a>
                 </div>
             </div>
             <div class="footer-bottom">
