Update website content/assets after main repo privacy update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SketchPrompt - Visual thinking for coding with AI</title>
-    <meta name="description" content="A powerful Cursor IDE extension for visual thinking and AI prompting. Sketch ideas and seamlessly collaborate with AI.">
+    <meta name="description" content="A powerful Cursor IDE extension for visual thinking and AI prompting. Sketch your thoughts and ideas and seamlessly collaborate with AI.">
     <meta name="keywords" content="SketchPrompt, Cursor IDE, AI collaboration, visual thinking, sketching, TLDraw">
     <meta name="robots" content="index, follow">
     
