Add Umami analytics tracking events to website

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 <span class="logo-text">SketchPrompt</span>
             </div>
             <div class="nav-links">
-                <a href="#features">Features</a>
-                <a href="#installation">Installation</a>
-                <a href="#usage">Usage</a>
-                <a href="#roadmap">Roadmap</a>
-                <a href="#installation" class="nav-cta">Get SketchPrompt</a>
+                <a href="#features" data-umami-event="nav-features">Features</a>
+                <a href="#installation" data-umami-event="nav-installation">Installation</a>
+                <a href="#usage" data-umami-event="nav-usage">Usage</a>
+                <a href="#roadmap" data-umami-event="nav-roadmap">Roadmap</a>
+                <a href="#installation" class="nav-cta" data-umami-event="nav-cta-get-sketchprompt">Get SketchPrompt</a>
             </div>
             <div class="nav-toggle">
                 <span></span>
@@ -61,8 +61,8 @@
                 </h1>
                 <p class="hero-description">SketchPrompt is a Cursor IDE extension that brings visual thinking into your coding workflow. Sketch ideas, user flows, or systems — then use them as part of your AI prompts, right where you code.</p>
                 <div class="hero-buttons">
-                    <a href="#installation" class="btn btn-primary">Get SketchPrompt</a>
-                    <a href="#features" class="btn btn-secondary">Learn more</a>
+                    <a href="#installation" class="btn btn-primary" data-umami-event="hero-cta-get-sketchprompt">Get SketchPrompt</a>
+                    <a href="#features" class="btn btn-secondary" data-umami-event="hero-cta-learn-more">Learn more</a>
                 </div>
             </div>
         </div>
@@ -350,8 +350,8 @@
             <h2>Ready to transform your AI coding workflow?</h2>
             <p>Join us in building the future of visual thinking for human-AI collaboration.</p>
             <div class="cta-buttons">
-                <a href="#installation" class="btn btn-primary">Use SketchPrompt in Cursor</a>
-                <a href="https://github.com/pascalx-git/SketchPrompt" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">View on GitHub</a>
+                <a href="#installation" class="btn btn-primary" data-umami-event="cta-use-sketchprompt">Use SketchPrompt in Cursor</a>
+                <a href="https://github.com/pascalx-git/SketchPrompt" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" data-umami-event="cta-view-github">View on GitHub</a>
             </div>
         </div>
     </section>
@@ -369,14 +369,14 @@
                 </div>
                 <div class="footer-section">
                     <h4>Links</h4>
-                    <a href="https://github.com/pascalx-git/SketchPrompt" target="_blank" rel="noopener noreferrer">GitHub</a>
-                    <a href="https://github.com/pascalx-git/SketchPrompt/issues" target="_blank" rel="noopener noreferrer">Issues</a>
-                    <a href="https://github.com/pascalx-git/SketchPrompt/blob/main/LICENSE" target="_blank" rel="noopener noreferrer">License</a>
+                    <a href="https://github.com/pascalx-git/SketchPrompt" target="_blank" rel="noopener noreferrer" data-umami-event="footer-github">GitHub</a>
+                    <a href="https://github.com/pascalx-git/SketchPrompt/issues" target="_blank" rel="noopener noreferrer" data-umami-event="footer-issues">Issues</a>
+                    <a href="https://github.com/pascalx-git/SketchPrompt/blob/main/LICENSE" target="_blank" rel="noopener noreferrer" data-umami-event="footer-license">License</a>
                 </div>
                 <div class="footer-section">
                     <h4>Resources</h4>
-                    <a href="https://cursor.sh" target="_blank" rel="noopener noreferrer">Cursor IDE</a>
-                    <a href="https://github.com/pascalx-git/SketchPrompt/blob/main/Help.md" target="_blank" rel="noopener noreferrer">Help</a>
+                    <a href="https://cursor.sh" target="_blank" rel="noopener noreferrer" data-umami-event="footer-cursor-ide">Cursor IDE</a>
+                    <a href="https://github.com/pascalx-git/SketchPrompt/blob/main/Help.md" target="_blank" rel="noopener noreferrer" data-umami-event="footer-help">Help</a>
                 </div>
             </div>
             <div class="footer-bottom">
