--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <a href="#features" data-umami-event="nav-features">Features</a>
                 <a href="#installation" data-umami-event="nav-installation">Installation</a>
                 <a href="#usage" data-umami-event="nav-usage">Usage</a>
+                <a href="#security" data-umami-event="nav-security">Security</a>
                 <a href="#roadmap" data-umami-event="nav-roadmap">Roadmap</a>
                 <a href="#installation" class="nav-cta" data-umami-event="nav-cta-get-sketchprompt">Get SketchPrompt</a>
             </div>
@@ -115,11 +116,21 @@
                                 <div class="feature-icon icon icon-warning folder">
                                     <!-- Folder Outline Icon -->
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="size-6">
-                                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12.75V12A2.25 2.25 0 0 1 4.5 9.75h15A2.25 2.25 0 0 1 21.75 12v.75m-8.69-6.44-2.12-2.12a1.5 1.5 0 0 0-1.061-.44H4.5A2.25 2.25 0 0 0 2.25 6v12a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18V9a2.25 2.25 0 0 0-2.25-2.25h-5.379a1.5 1.5 0 0 1-1.06-.44Z" />
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12.75V12A2.25 2.25 0 0 1 4.5 9.75h15A2.25 2.25 0 0 0 2.25 6v12a2.25 2.25 0 0 0 2.25 2.25h15A2.25 2.25 0 0 0 21.75 18V9a2.25 2.25 0 0 0-2.25-2.25h-5.379a1.5 1.5 0 0 1-1.06-.44Z" />
                                     </svg>
                                 </div>
                                 <h3>Persistent Sketches</h3>
                                 <p>Your sketches are always saved and organized, ready to revisit, remix, or share anytime.</p>
+                            </div>
+                            <div class="feature-card card">
+                                <div class="feature-icon icon icon-info shield">
+                                    <!-- Shield Outline Icon -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="size-6">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
+                                    </svg>
+                                </div>
+                                <h3>Security-First</h3>
+                                <p>Built with security in mind—open source, local processing, and regular security reviews.</p>
                             </div>
                         </div>
                     </div>
@@ -340,6 +351,47 @@
                     <h3>Real-Time Collaboration</h3>
                     <p>Multi-user sketching with real-time synchronization, conflict resolution, and cloud-based sharing capabilities.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Security Section -->
+    <section id="security" class="security">
+        <div class="container">
+            <h2 class="section-title">Security You Can Trust</h2>
+            <p class="section-subtitle">Built with security-first principles for peace of mind</p>
+            <div class="security-grid">
+                <div class="security-card card">
+                    <div class="feature-icon icon icon-info shield">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
+                        </svg>
+                    </div>
+                    <h3>Local-First Architecture</h3>
+                    <p>Your sketches stay on your machine. No cloud dependencies or data transmission required.</p>
+                </div>
+                <div class="security-card card">
+                    <div class="feature-icon icon icon-success check">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
+                        </svg>
+                    </div>
+                    <h3>Open Source & Auditable</h3>
+                    <p>Full source code available for security review. No hidden functionality or surprises.</p>
+                </div>
+                <div class="security-card card">
+                    <div class="feature-icon icon icon-warning eye">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.639 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.639 0-8.573-3.007-9.963-7.178Z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                        </svg>
+                    </div>
+                    <h3>Regular Security Reviews</h3>
+                    <p>Iterative security assessments before each release to ensure your safety.</p>
+                </div>
+            </div>
+            <div class="security-cta">
+                <a href="https://github.com/pascalx-git/SketchPrompt/blob/main/SECURITY.md" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" data-umami-event="security-details">View Security Details</a>
             </div>
         </div>
     </section>
