--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SketchPrompt - Visual thinking for coding with AI</title>
-    <meta name="description" content="A powerful VS Code extension for visual thinking and AI prompting. Works in OpenVSX-compatible editors like Cursor IDE, Windsurf, and Google Firebase Studio. Sketch ideas and seamlessly collaborate with AI.">
-    <meta name="keywords" content="SketchPrompt, VS Code extension, AI collaboration, visual thinking, sketching, OpenVSX, Cursor IDE, Windsurf, Firebase Studio">
+    <meta name="description" content="Visual thinking for coding with AI. Sketch ideas and use them in your prompts to improve your workflow with AI models. Works in OpenVSX-compatible editors like Cursor, Windsurf, Firebase Studio, etc.">
+    <meta name="keywords" content="SketchPrompt, visual thinking, AI collaboration, sketching, OpenVSX, Cursor IDE, Windsurf, Firebase Studio">
     <meta name="robots" content="index, follow">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sketch-prompt.com/">
     <meta property="og:title" content="SketchPrompt - Visual Thinking for AI Collaboration">
-    <meta property="og:description" content="A powerful VS Code extension for visual thinking and AI prompting. Works in OpenVSX-compatible editors. Sketch ideas and seamlessly collaborate with AI.">
+    <meta property="og:description" content="Visual thinking for coding with AI. Sketch ideas and use them in your prompts to improve your workflow with AI models. Works in OpenVSX-compatible editors like Cursor, Windsurf, Firebase Studio, etc.">
     <meta property="og:image" content="https://sketch-prompt.com/images/og-image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://sketch-prompt.com/">
     <meta property="twitter:title" content="SketchPrompt - Visual Thinking for AI Collaboration">
-    <meta property="twitter:description" content="A powerful VS Code extension for visual thinking and AI prompting. Works in OpenVSX-compatible editors. Sketch ideas and seamlessly collaborate with AI.">
+    <meta property="twitter:description" content="Visual thinking for coding with AI. Sketch ideas and use them in your prompts to improve your workflow with AI models. Works in OpenVSX-compatible editors like Cursor, Windsurf, Firebase Studio, etc.">
     <meta property="twitter:image" content="https://sketch-prompt.com/images/og-image.png">
 
     <link rel="stylesheet" href="styles.css">
@@ -62,13 +62,13 @@
                 <h1 class="hero-title">
                     <span class="cycling-value-prop">Sketch your ideas</span> when collaborating with AI
                 </h1>
-                <p class="hero-description">SketchPrompt brings visual thinking into your AI coding workflow. Works in any OpenVSX-compatible editor (Cursor IDE, Windsurf, Google Firebase Studio, etc). Sketch ideas, user flows, or systems — then use them as part of your AI prompts, right where you code.</p>
+                <p class="hero-description">Visual thinking for coding with AI. Draw, doodle, and map out your ideas with intuitive tools—just like pen and paper, but smarter. Copy your sketches with a click and drop them straight into your next AI conversation. Works in OpenVSX-compatible editors like Cursor, Windsurf, Firebase Studio, etc.</p>
                 <div class="hero-buttons">
                     <a href="#installation" class="btn btn-primary" data-umami-event="hero-cta-get-sketchprompt">Get SketchPrompt</a>
                     <a href="#features" class="btn btn-secondary" data-umami-event="hero-cta-learn-more">Learn more</a>
                 </div>
                 <div class="hero-badges">
-                    <img src="https://img.shields.io/badge/version-0.2.3-blue.svg?labelColor=%23cccccc&color=%233b82f6" alt="Version" class="hero-badge">
+                    <img src="https://img.shields.io/badge/version-0.2.4-blue.svg?labelColor=%23cccccc&color=%233b82f6" alt="Version" class="hero-badge">
                     <img src="https://img.shields.io/badge/license-MIT-green.svg?labelColor=%23cccccc&color=%233b82f6" alt="License" class="hero-badge">
                     <img src="https://img.shields.io/open-vsx/dt/PascalX/SketchPrompt?labelColor=%23cccccc&color=%233b82f6" alt="Downloads" class="hero-badge">
                     <img src="https://img.shields.io/open-vsx/stars/PascalX/SketchPrompt?labelColor=%23cccccc&color=%233b82f6" alt="Rating" class="hero-badge">
@@ -202,38 +202,38 @@
                     <div id="why-tab" class="tab-pane">
                         <!-- Why SketchPrompt Section -->
                         <div class="why-section">
-                            <h2 class="section-title">Why SketchPrompt?</h2>
-                            <div class="why-cards">
+                        <h2 class="section-title">Why SketchPrompt?</h2>
+                        <div class="why-cards">
                                 <div class="why-card card">
-                                    <h3>Visual thinking is powerful</h3>
-                                    <p>Sketching helps you clarify, remember, and communicate ideas more effectively than text alone.</p>
-                                </div>
+                                <h3>Visual thinking is powerful</h3>
+                                <p>Sketching helps you clarify, remember, and communicate ideas more effectively than text alone.</p>
+                            </div>
                                 <div class="why-card card">
-                                    <h3>Communicate intent to AI</h3>
-                                    <p>Don't waste time typing long explanations. Show your intent visually and let AI understand you faster.</p>
-                                </div>
+                                <h3>Communicate intent to AI</h3>
+                                <p>Don't waste time typing long explanations. Show your intent visually and let AI understand you faster.</p>
+                            </div>
                                 <div class="why-card card">
-                                    <h3>All-in-one workflow</h3>
-                                    <p>No more switching between tools, windows, or tabs. Sketch, prompt, and collaborate—all in one place.</p>
-                                </div>
+                                <h3>All-in-one workflow</h3>
+                                <p>No more switching between tools, windows, or tabs. Sketch, prompt, and collaborate—all in one place.</p>
+                            </div>
                                 <div class="why-card card">
-                                    <h3>Seamless integration</h3>
+                                <h3>Seamless integration</h3>
                                     <p>Built for VS Code-based editors, SketchPrompt fits right into your coding workflow.</p>
-                                </div>
+                            </div>
                                 <div class="why-card card fun-fact">
-                                    <h3>Some fun facts</h3>
-                                    <p class="fun-fact-text" aria-live="polite"></p>
-                                    <div class="fact-indicator">
-                                        <span class="indicator-dot" aria-label="Fact 1"></span>
-                                        <span class="indicator-dot" aria-label="Fact 2"></span>
-                                        <span class="indicator-dot" aria-label="Fact 3"></span>
-                                        <span class="indicator-dot" aria-label="Fact 4"></span>
-                                        <span class="indicator-dot" aria-label="Fact 5"></span>
-                                        <span class="indicator-dot" aria-label="Fact 6"></span>
-                                        <span class="indicator-dot" aria-label="Fact 7"></span>
-                                        <span class="indicator-dot" aria-label="Fact 8"></span>
-                                        <span class="indicator-dot" aria-label="Fact 9"></span>
-                                        <span class="indicator-dot" aria-label="Fact 10"></span>
+                                <h3>Some fun facts</h3>
+                                <p class="fun-fact-text" aria-live="polite"></p>
+                                <div class="fact-indicator">
+                                    <span class="indicator-dot" aria-label="Fact 1"></span>
+                                    <span class="indicator-dot" aria-label="Fact 2"></span>
+                                    <span class="indicator-dot" aria-label="Fact 3"></span>
+                                    <span class="indicator-dot" aria-label="Fact 4"></span>
+                                    <span class="indicator-dot" aria-label="Fact 5"></span>
+                                    <span class="indicator-dot" aria-label="Fact 6"></span>
+                                    <span class="indicator-dot" aria-label="Fact 7"></span>
+                                    <span class="indicator-dot" aria-label="Fact 8"></span>
+                                    <span class="indicator-dot" aria-label="Fact 9"></span>
+                                    <span class="indicator-dot" aria-label="Fact 10"></span>
                                     </div>
                                 </div>
                             </div>
@@ -401,7 +401,7 @@
                     <div class="step">
                         <div class="step-number">1</div>
                         <div class="step-content">
-                            <h3>Open the Command Palette</h3>
+                        <h3>Open the Command Palette</h3>
                             <p>Press <code>Cmd/Ctrl + Shift + P</code> in your VS Code-based editor.</p>
                         </div>
                     </div>
@@ -413,13 +413,13 @@
                                 <strong>Option 1:</strong> Type and select <strong>SketchPrompt: New Sketch</strong> in the Command Palette.<br>
                                 <strong>Option 2:</strong> <span style="white-space:nowrap">Right-click</span> in the file explorer and choose <strong>New SketchPrompt Sketch</strong> from the context menu.
                             </p>
-                        </div>
+                </div>
                     </div>
                     <div class="step">
                         <div class="step-number">3</div>
                         <div class="step-content">
-                            <h3>Start Sketching</h3>
-                            <p>Use the visual editor to draw, brainstorm, and prompt AI with your ideas!</p>
+                        <h3>Start Sketching</h3>
+                        <p>Use the visual editor to draw, brainstorm, and prompt AI with your ideas!</p>
                         </div>
                     </div>
                     <div class="step">
@@ -440,7 +440,7 @@
     </section>
 
     <!-- Security Section -->
-    <section id="security" class="security alt-bg">
+    <section id="security" class="security">
         <div class="container">
             <h2 class="section-title">Security You Can Trust</h2>
             <p class="section-subtitle">Built with security-first principles for peace of mind</p>
@@ -482,7 +482,7 @@
     </section>
 
     <!-- Roadmap Section -->
-    <section id="roadmap" class="roadmap">
+    <section id="roadmap" class="roadmap alt-bg">
         <div class="container">
             <h2 class="section-title">What's Next for SketchPrompt?</h2>
             <div class="roadmap-timeline user-focused">
@@ -540,6 +540,11 @@
                     <a href="https://windsurf.com" target="_blank" rel="noopener noreferrer" data-umami-event="footer-windsurf">Windsurf</a>
                     <a href="https://firebase.studio/" target="_blank" rel="noopener noreferrer" data-umami-event="footer-firebase-studio">Firebase Studio</a>
                     <a href="https://github.com/pascalx-git/SketchPrompt/blob/main/HELP.md" target="_blank" rel="noopener noreferrer" data-umami-event="footer-help">Help</a>
+                </div>
+                <div class="footer-section">
+                    <h4>Connect</h4>
+                    <a href="mailto:hey@sketch-prompt.com" data-umami-event="footer-email">hey@sketch-prompt.com</a>
+                    <a href="https://www.youtube.com/@SketchPrompt" target="_blank" rel="noopener noreferrer" data-umami-event="footer-youtube">YouTube</a>
                 </div>
             </div>
             <div class="footer-bottom">
