Update website style issue

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     </section>
 
     <!-- Security Section -->
-    <section id="security" class="security">
+    <section id="security" class="security alt-bg">
         <div class="container">
             <h2 class="section-title">Security You Can Trust</h2>
             <p class="section-subtitle">Built with security-first principles for peace of mind</p>
