minor copy update to hero section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h1 class="hero-title">
                     <span class="cycling-value-prop">Sketch your ideas</span> when collaborating with AI
                 </h1>
-                <p class="hero-description">Visual thinking for coding with AI. Draw, doodle, and map out your ideas with intuitive tools—just like pen and paper, but smarter. Copy your sketches with a click and drop them straight into your next AI conversation. Works in OpenVSX-compatible editors like Cursor, Windsurf, Firebase Studio, etc.</p>
+                <p class="hero-description">Visual thinking for coding with AI. Sketch ideas and use them in your prompts to improve your workflow with AI models. Works in OpenVSX-compatible editors like Cursor, Windsurf, Firebase Studio, etc.</p>
                 <div class="hero-buttons">
                     <a href="#installation" class="btn btn-primary" data-umami-event="hero-cta-get-sketchprompt">Get SketchPrompt</a>
                     <a href="#features" class="btn btn-secondary" data-umami-event="hero-cta-learn-more">Learn more</a>
