--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="#usage" data-umami-event="nav-usage">Usage</a>
                 <a href="#security" data-umami-event="nav-security">Security</a>
                 <a href="#roadmap" data-umami-event="nav-roadmap">Roadmap</a>
-                <a href="#installation" class="nav-cta" data-umami-event="nav-cta-get-sketchprompt">Get SketchPrompt</a>
+                <button class="nav-cta nav-install-btn" data-umami-event="nav-cta-get-sketchprompt">Get SketchPrompt</button>
             </div>
         </div>
     </nav>
@@ -64,7 +64,7 @@
                 </h1>
                 <p class="hero-description">Visual thinking for coding with AI. Sketch ideas and use them in your prompts to improve your workflow with AI models. Works in OpenVSX-compatible editors like Cursor, Windsurf, Firebase Studio, etc.</p>
                 <div class="hero-buttons">
-                    <a href="#installation" class="btn btn-primary" data-umami-event="hero-cta-get-sketchprompt">Get SketchPrompt</a>
+                    <button class="btn btn-primary hero-install-btn" data-umami-event="hero-cta-get-sketchprompt">Get SketchPrompt</button>
                     <a href="#features" class="btn btn-secondary" data-umami-event="hero-cta-learn-more">Learn more</a>
                 </div>
                 <div class="hero-badges">
@@ -294,6 +294,7 @@
             <div class="installation-tabs">
                 <div class="tab-buttons compact-tabs">
                     <button class="tab-button active" data-tab="compatible" data-umami-event="tab-compatible">Compatible Editors</button>
+                    <button class="tab-button" data-tab="editor-select" data-umami-event="tab-editor-select">Quick Install</button>
                     <button class="tab-button" data-tab="github" data-umami-event="tab-github">GitHub</button>
                 </div>
                 
@@ -338,6 +339,39 @@
                                         <p>Use <code>Cmd/Ctrl + Shift + P</code> and run "SketchPrompt: New Sketch"</p>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="editor-select-tab" class="tab-pane">
+                        <div class="installation-method">
+                            <h3>Choose your code editor</h3>
+                            <p class="editor-select-description">SketchPrompt is an extension that works with many code editors. Select your editor to install SketchPrompt directly.</p>
+                            <div class="editor-selection">
+                                <div class="editor-option">
+                                    <div class="editor-info">
+                                        <img src="https://cursor.sh/favicon.ico" alt="Cursor" class="editor-icon" onerror="this.src='data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTEyIDJMMTQgMTBIMjJMMTQgMTJMMTYgMjJMMTIgMThMMTAgMjJMMTIgMTJMMiAxMEwxMiAyWiIgZmlsbD0iIzMzMyIvPgo8L3N2Zz4K'">
+                                        <span class="editor-name">Cursor</span>
+                                    </div>
+                                    <button class="btn btn-secondary install-btn" data-editor="cursor" data-umami-event="install-cursor">Install SketchPrompt</button>
+                                </div>
+                                <div class="editor-option">
+                                    <div class="editor-info">
+                                        <img src="https://windsurf.com/favicon.ico" alt="Windsurf" class="editor-icon" onerror="this.src='data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTEyIDJMMTQgMTBIMjJMMTQgMTJMMTYgMjJMMTIgMThMMTAgMjJMMTIgMTJMMiAxMEwxMiAyWiIgZmlsbD0iIzMzMyIvPgo8L3N2Zz4K'">
+                                        <span class="editor-name">Windsurf</span>
+                                    </div>
+                                    <button class="btn btn-secondary install-btn" data-editor="windsurf" data-umami-event="install-windsurf">Install SketchPrompt</button>
+                                </div>
+                                <div class="editor-option">
+                                    <div class="editor-info">
+                                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROklQN6uy2soSSqi6okf-w-yyymRbETduSeA&s" alt="Google Firebase Studio" class="editor-icon" onerror="this.src='data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTEyIDJMMTQgMTBIMjJMMTQgMTJMMTYgMjJMMTIgMThMMTAgMjJMMTIgMTJMMiAxMEwxMiAyWiIgZmlsbD0iIzMzMyIvPgo8L3N2Zz4K'">
+                                        <span class="editor-name">Google Firebase Studio</span>
+                                    </div>
+                                    <a href="https://firebase.studio" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" data-umami-event="visit-firebase-studio">Visit Firebase Studio</a>
+                                </div>
+                            </div>
+                            <div class="editor-note">
+                                <p><strong>Note:</strong> If your editor isn't listed, you can still install SketchPrompt from your editor's extension marketplace by searching for "SketchPrompt".</p>
                             </div>
                         </div>
                     </div>
@@ -511,7 +545,7 @@
             <h2>Ready to transform your AI coding workflow?</h2>
             <p>Join us in building the future of visual thinking for human-AI collaboration.</p>
             <div class="cta-buttons">
-                <a href="#installation" class="btn btn-primary" data-umami-event="cta-use-sketchprompt">Get SketchPrompt</a>
+                <button class="btn btn-primary cta-install-btn" data-umami-event="cta-use-sketchprompt">Get SketchPrompt</button>
                 <a href="https://github.com/pascalx-git/SketchPrompt" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" data-umami-event="cta-view-github">View on GitHub</a>
             </div>
         </div>
