Update SketchPrompt website

--- a/index.html
+++ b/index.html
@@ -354,21 +354,21 @@
                                         <img src="https://cursor.sh/favicon.ico" alt="Cursor" class="editor-icon" onerror="this.src='data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTEyIDJMMTQgMTBIMjJMMTQgMTJMMTYgMjJMMTIgMThMMTAgMjJMMTIgMTJMMiAxMEwxMiAyWiIgZmlsbD0iIzMzMyIvPgo8L3N2Zz4K'">
                                         <span class="editor-name">Cursor</span>
                                     </div>
-                                    <button class="btn btn-secondary install-btn" data-editor="cursor" data-umami-event="install-cursor">Install SketchPrompt</button>
+                                    <button class="btn btn-secondary install-btn" data-editor="cursor" data-umami-event="install-cursor">Install</button>
                                 </div>
                                 <div class="editor-option">
                                     <div class="editor-info">
                                         <img src="https://windsurf.com/favicon.ico" alt="Windsurf" class="editor-icon" onerror="this.src='data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTEyIDJMMTQgMTBIMjJMMTQgMTJMMTYgMjJMMTIgMThMMTAgMjJMMTIgMTJMMiAxMEwxMiAyWiIgZmlsbD0iIzMzMyIvPgo8L3N2Zz4K'">
                                         <span class="editor-name">Windsurf</span>
                                     </div>
-                                    <button class="btn btn-secondary install-btn" data-editor="windsurf" data-umami-event="install-windsurf">Install SketchPrompt</button>
+                                    <button class="btn btn-secondary install-btn" data-editor="windsurf" data-umami-event="install-windsurf">Install</button>
                                 </div>
                                 <div class="editor-option">
                                     <div class="editor-info">
                                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROklQN6uy2soSSqi6okf-w-yyymRbETduSeA&s" alt="Google Firebase Studio" class="editor-icon" onerror="this.src='data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTEyIDJMMTQgMTBIMjJMMTQgMTJMMTYgMjJMMTIgMThMMTAgMjJMMTIgMTJMMiAxMEwxMiAyWiIgZmlsbD0iIzMzMyIvPgo8L3N2Zz4K'">
                                         <span class="editor-name">Google Firebase Studio</span>
                                     </div>
-                                    <a href="https://firebase.studio" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" data-umami-event="visit-firebase-studio">Visit Firebase Studio</a>
+                                    <a href="https://firebase.studio" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" data-umami-event="visit-firebase-studio">Install</a>
                                 </div>
                             </div>
                             <div class="editor-note">
