Update SketchPrompt website

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="images/logo-animated-black-cursor.gif" alt="SketchPrompt" class="logo" onerror="this.src='images/logo.svg'">
-                <span class="logo-text">SketchPrompt</span>
+                <a href="#" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 0.5rem;">
+                    <img src="images/logo-animated-black-cursor.gif" alt="SketchPrompt" class="logo" onerror="this.src='images/logo.svg'">
+                    <span class="logo-text">SketchPrompt</span>
+                </a>
             </div>
             
             <div class="nav-toggle">
@@ -579,8 +581,10 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="images/logo-animated-white-cursor.gif" alt="SketchPrompt" class="logo" onerror="this.src='images/logo.svg'">
-                        <span class="logo-text">SketchPrompt</span>
+                        <a href="#" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 0.5rem;">
+                            <img src="images/logo-animated-white-cursor.gif" alt="SketchPrompt" class="logo" onerror="this.src='images/logo.svg'">
+                            <span class="logo-text">SketchPrompt</span>
+                        </a>
                     </div>
                     <p>Visual thinking for coding with AI</p>
                 </div>
