--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
         </footer>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2.0"></script>
 </body>
 </html>
 
